--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
     <div class="container">
         <div class="header-container">
-            <h1>Dynamic VDT Calculator</h1>
+            <h1>VDT Calculator</h1>
             <button class="control-btn export-btn" id="export-btn">Export CSV (All)</button>
         </div>
         
