--- a/index.html
+++ b/index.html
@@ -39,10 +39,13 @@
             margin: 0;
             display: inline-block;
         }
-        .header-container .export-btn {
+        .header-actions {
             position: absolute;
             top: 30px;
             right: 30px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
         }
         .patient-id-container {
             display: flex;
@@ -72,22 +75,22 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            padding: 0 20px;
-            height: 40px;
+            padding: 0 15px;
+            height: 36px;
             color: white;
             border: none;
-            border-radius: 8px;
-            font-size: 1.0em;
+            border-radius: 6px;
+            font-size: 0.9em;
             font-weight: bold;
             cursor: pointer;
             transition: all 0.3s;
         }
         .compact-btn {
-            width: 40px;
-            height: 40px;
+            width: 36px;
+            height: 36px;
             padding: 0;
-            font-size: 1.8em;
-            line-height: 40px;
+            font-size: 1.6em;
+            line-height: 36px;
         }
         .add-row-btn { background-color: #27ae60; }
         .remove-row-btn { background-color: #e74c3c; }
@@ -322,10 +325,14 @@
             border-radius: 4px;
             resize: vertical;
         }
-        .patient-actions button {
-            padding: 5px 10px;
-            margin-right: 5px;
-            font-size: 0.9em;
+        .patient-actions {
+            display: flex;
+            gap: 5px;
+        }
+        .patient-actions .control-btn {
+             font-size: 0.8em;
+             height: 30px;
+             padding: 0 10px;
         }
 
     </style>
@@ -335,7 +342,10 @@
     <div class="container">
         <div class="header-container">
             <h1>Dynamic VDT Calculator</h1>
-            <button class="control-btn export-btn" id="export-btn">Export CSV (All)</button>
+            <div class="header-actions">
+                <button class="control-btn manage-btn" id="manage-patients-btn">Worklist</button>
+                <button class="control-btn export-btn" id="export-btn">Export CSV (All)</button>
+            </div>
         </div>
         
         <div class="patient-id-container">
@@ -345,8 +355,7 @@
 
         <div class="table-controls">
             <div class="left-controls">
-                <button class="control-btn manage-btn" id="manage-patients-btn">Manage Patients</button>
-                <button class="control-btn add-row-btn" id="add-scan-btn">+ Add Scan</button>
+                <button class="control-btn add-row-btn" id="add-scan-btn">Add Scan</button>
                 <div class="sort-control">
                     <label for="sort-order">Display Order:</label>
                     <select id="sort-order">
